--- a/index.html
+++ b/index.html
@@ -91,13 +91,18 @@
         <div class="mt-10 mx-auto" style="max-width: 500px;">
             <div class="neon-effect rounded-2xl p-1">
                 <div class="relative w-full overflow-hidden aspect-video">
-                    <video 
+                    <!-- INSTRUCCIONES PARA EL VIDEO DE YOUTUBE: -->
+                    <!-- 1. Ve a tu video en YouTube. -->
+                    <!-- 2. Haz clic en 'Compartir', luego en 'Insertar'. -->
+                    <!-- 3. Copia el código y reemplaza todo el <iframe> de abajo por el que copiaste. -->
+                    <iframe 
                         class="absolute top-0 left-0 w-full h-full rounded-xl" 
-                        src="PROYECTO_ PAZZAPP.mp4" 
-                        controls
-                        playsinline>
-                        Tu navegador no soporta el elemento de video.
-                    </video>
+                        src="https://www.youtube.com/embed/dHiX_Xkh2TQ?si=MSk8TEA68pNiW2ff" 
+                        title="YouTube video player" 
+                        frameborder="0" 
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                        allowfullscreen>
+                    </iframe>
                 </div>
             </div>
         </div>
