--- a/index.html
+++ b/index.html
@@ -153,6 +153,15 @@
                 </div>
                 <div class="p-4 mt-auto"><a href="#" class="block w-full text-center bg-blue-600 text-white font-semibold py-2 px-4 rounded-lg hover:bg-blue-700 transition-colors duration-300">Descargar App</a></div>
             </article>
+
+            <!-- NUEVA APP AÑADIDA -->
+            <article class="neon-effect rounded-2xl p-1 flex flex-col overflow-hidden">
+                <div class="p-6 flex-grow">
+                    <div class="flex items-center mb-4"><img src="https://placehold.co/64x64/9333ea/FFFFFF?text=MF" alt="Logo de la App 5" class="w-16 h-16 rounded-lg mr-4"><h3 class="text-xl font-bold text-slate-100">App Mi Futuro</h3></div>
+                    <p class="text-slate-300 text-sm">App de orientacion para estudios superiores. Desarrollada por el alumno Axel Lizarraga</p>
+                </div>
+                <div class="p-4 mt-auto"><a href="Mi_Futuro 1.0.apk" class="block w-full text-center bg-blue-600 text-white font-semibold py-2 px-4 rounded-lg hover:bg-blue-700 transition-colors duration-300">Descargar App</a></div>
+            </article>
         </div>
     </main>
 
