--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                     <div class="flex items-center mb-4"><img src="literatura.png" alt="Logo de la App 4" class="w-16 h-16 rounded-lg mr-4"><h3 class="text-xl font-bold text-slate-100">Materia: Literatura</h3></div>
                     <p class="text-slate-300 text-sm">Aplicación desarrollada por Tomas Cirulli, Miño Ludmila y Valentin Riquelme.</p>
                 </div>
-                <div class="p-4 mt-auto"><a href="#" class="block w-full text-center bg-blue-600 text-white font-semibold py-2 px-4 rounded-lg hover:bg-blue-700 transition-colors duration-300">Descargar App</a></div>
+                <div class="p-4 mt-auto"><a href="literatura_app.apk" class="block w-full text-center bg-blue-600 text-white font-semibold py-2 px-4 rounded-lg hover:bg-blue-700 transition-colors duration-300">Descargar App</a></div>
             </article>
 
             <!-- NUEVA APP AÑADIDA -->
@@ -210,3 +210,4 @@
     </script>
 </body>
 </html>
+
