--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                     <div class="flex items-center mb-4"><img src="literatura.png" alt="Logo de la App 4" class="w-16 h-16 rounded-lg mr-4"><h3 class="text-xl font-bold text-slate-100">Materia: Literatura</h3></div>
                     <p class="text-slate-300 text-sm">Aplicación desarrollada por Tomas Cirulli, Miño Ludmila y Valentin Riquelme.</p>
                 </div>
-                <div class="p-4 mt-auto"><a href="literatura_app.apk" class="block w-full text-center bg-blue-600 text-white font-semibold py-2 px-4 rounded-lg hover:bg-blue-700 transition-colors duration-300">Descargar App</a></div>
+                <div class="p-4 mt-auto"><a href="#" class="block w-full text-center bg-blue-600 text-white font-semibold py-2 px-4 rounded-lg hover:bg-blue-700 transition-colors duration-300">Descargar App</a></div>
             </article>
 
             <!-- NUEVA APP AÑADIDA -->
@@ -160,18 +160,27 @@
                     <div class="flex items-center mb-4"><img src="https://placehold.co/64x64/9333ea/FFFFFF?text=MF" alt="Logo de la App 5" class="w-16 h-16 rounded-lg mr-4"><h3 class="text-xl font-bold text-slate-100">App Mi Futuro</h3></div>
                     <p class="text-slate-300 text-sm">App de orientacion para estudios superiores. Desarrollada por el alumno Axel Lizarraga</p>
                 </div>
-                <div class="p-4 mt-auto"><a href="Mi_Futuro 1.0.apk" class="block w-full text-center bg-blue-600 text-white font-semibold py-2 px-4 rounded-lg hover:bg-blue-700 transition-colors duration-300">Descargar App</a></div>
+                <div class="p-4 mt-auto"><a href="#" class="block w-full text-center bg-blue-600 text-white font-semibold py-2 px-4 rounded-lg hover:bg-blue-700 transition-colors duration-300">Descargar App</a></div>
             </article>
         </div>
     </main>
 
-    <!-- Pie de página con Logo Institucional -->
+    <!-- Pie de página con Logo Institucional y QR -->
     <footer class="text-center py-8 mt-8 border-t border-slate-200 dark:border-slate-700 transition-colors">
-        <div class="flex justify-center items-center space-x-4 mb-4">
-            <span class="text-slate-500 dark:text-slate-400">Apoyado por:</span>
-            <img src="escudo escuela.png" alt="Logo Institucional" class="h-32">
+        <div class="container mx-auto grid grid-cols-1 md:grid-cols-2 gap-8 items-center">
+            <!-- Sección de Apoyo Institucional -->
+            <div class="flex flex-col items-center">
+                <span class="text-slate-500 dark:text-slate-400">Apoyado por:</span>
+                <img src="escudo escuela.png" alt="Logo Institucional" class="h-32 mt-2">
+            </div>
+            <!-- Sección del Código QR -->
+            <div class="flex flex-col items-center">
+                <p class="text-slate-500 dark:text-slate-400 font-semibold mb-2">¡Accede desde tu móvil!</p>
+                <!-- IMPORTANTE: Reemplaza "URL_DE_TU_PAGINA_AQUI" con el enlace real de tu sitio web cuando lo publiques. -->
+                <img src="https://api.qrserver.com/v1/create-qr-code/?size=128x128&data=https://soloporspotify26-wq.github.io/PAZZAPP/" alt="Código QR para acceder a la página" class="rounded-lg bg-white p-1">
+            </div>
         </div>
-        <p class="text-slate-500 dark:text-slate-400">&copy; 2025 PazzApp. Grupo 551 Informatica, con la ayuda del profesor Nava.</p>
+        <p class="text-slate-500 dark:text-slate-400 mt-8">&copy; 2025 PazzApp. Grupo 551 Informatica, con la ayuda del profesor Nava.</p>
     </footer>
 
     <!-- Botón Flotante de Comentarios -->
@@ -210,4 +219,6 @@
     </script>
 </body>
 </html>
+
+
 
