--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 
             <article class="neon-effect rounded-2xl p-1 flex flex-col overflow-hidden">
                 <div class="p-6 flex-grow">
-                    <div class="flex items-center mb-4"><img src="politica.png" alt="Logo de la App 3" class="w-16 h-16 rounded-lg mr-4"><h3 class="text-xl font-bold text-slate-100">Materia: Politica y cuidadania</h3></div>
+                    <div class="flex items-center mb-4"><img src="politica.png" alt="Logo de la App 3" class="w-16 h-16 rounded-lg mr-4"><h3 class="text-xl font-bold text-slate-100">Materia: Politica y ciudadania</h3></div>
                     <p class="text-slate-300 text-sm">Aplicación desarrollada por las alumnas Marian López, Yanet Rosalez y Pricsila Alvarez.</p>
                 </div>
                 <div class="p-4 mt-auto"><a href="politica.apk" class="block w-full text-center bg-blue-600 text-white font-semibold py-2 px-4 rounded-lg hover:bg-blue-700 transition-colors duration-300">Descargar App</a></div>
@@ -219,6 +219,7 @@
     </script>
 </body>
 </html>
+
 
 
 
